force-app/main/default/objects/ssot__SuggestedAssessmentReason__dlm/fields/ssot__PrimaryAsmtQuestionResponseId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PrimaryAsmtQuestionResponseId__c</fullName>
    <label>PrimaryAsmtQuestionResponse</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PrimaryAsmtQuestionResponseId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>