force-app/main/default/objects/ssot__SuggestedAssessmentReason__dlm/fields/ssot__PrimaryAssessmentId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PrimaryAssessmentId__c</fullName>
    <label>PrimaryAssessment</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PrimaryAssessmentId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>