force-app/main/default/objects/ssot__SuggestedAssessmentReason__dlm/fields/ssot__rel_1720291281069_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720291281069_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SuggestedAssessmentReason_PrimaryAss_rel</label>
    <referenceTo>ssot__Assessment__dlm</referenceTo>
    <relationshipLabel>SuggestedAssessmentReason_PrimaryAss_rel</relationshipLabel>
    <relationshipName>rel_1720291281069_end</relationshipName>
    <type>Lookup</type>
</CustomField>