force-app/main/default/objects/ssot__SuggestedAssessmentReason__dlm/fields/ssot__SuggestedAssessmentDefId__c.field-meta.xml
<CustomField>
    <fullName>ssot__SuggestedAssessmentDefId__c</fullName>
    <label>SuggestedAssessmentDef</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SuggestedAssessmentDefId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>