force-app/main/default/objects/ssot__SuggestedAssessmentReason__dlm/fields/ssot__SuggestionSourceType__c.field-meta.xml
<CustomField>
    <fullName>ssot__SuggestionSourceType__c</fullName>
    <label>SuggestionSourceType</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SuggestionSourceType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>